[tool.poetry]
name = "pynews"
version = "0.3.0"
description = "PyNews is a simple Python CLI to browse news from HN website"
license = {text = "GNU General Public License v3 (GPLv3)"}
readme = "README.rst"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
    "Topic :: System :: Shells",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_variable = [
    "setup.py:__version__",
    "pyproject.toml:version",
]
branch = "main"
changelog_file = "CHANGELOG.md"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
